--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -362,6 +362,7 @@
     <addaction name="actionOpen"/>
     <addaction name="separator"/>
     <addaction name="actionSave_Current_Image"/>
+    <addaction name="actionSave_Current_Image_Corrected"/>
     <addaction name="actionSave_All_Channels"/>
    </widget>
    <widget class="QMenu" name="menuOptions">
@@ -426,6 +427,11 @@
   <action name="actionAbout_Qt">
    <property name="text">
     <string>About Qt</string>
+   </property>
+  </action>
+  <action name="actionSave_Current_Image_Corrected">
+   <property name="text">
+    <string>Save Current Image (Corrected)</string>
    </property>
   </action>
  </widget>
