--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -482,8 +482,14 @@
     <addaction name="actionAbout_LeanHRPT"/>
     <addaction name="actionAbout_Qt"/>
    </widget>
+   <widget class="QMenu" name="menuSensor">
+    <property name="title">
+     <string>Sensor</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuOptions"/>
+   <addaction name="menuSensor"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
