--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -465,6 +465,7 @@
     <addaction name="actionSave_Current_Image"/>
     <addaction name="actionSave_Current_Image_Corrected"/>
     <addaction name="actionSave_All_Channels"/>
+    <addaction name="actionSave_GCP_File"/>
    </widget>
    <widget class="QMenu" name="menuOptions">
     <property name="title">
@@ -539,6 +540,11 @@
   <action name="actionSave_Current_Image_Corrected">
    <property name="text">
     <string>Save Current Image (Corrected)</string>
+   </property>
+  </action>
+  <action name="actionSave_GCP_File">
+   <property name="text">
+    <string>Save GCP File</string>
    </property>
   </action>
  </widget>
