Random stuff, mainly switch to C++14 for binary notation A commad prmopt is no longer opened on windows Flip doesn't break projection Remove some redundant code And fix some warnings

--- a/src/qt/mainwindow.ui
+++ b/src/qt/mainwindow.ui
@@ -531,6 +531,9 @@
    <property name="text">
     <string>Flip</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+F</string>
+   </property>
   </action>
   <action name="actionDocumentation">
    <property name="text">
