Remove logo128.png, use logo128.ico instead

--- a/src/qt/mainwindow.ui
+++ b/src/qt/mainwindow.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>logo128.png</normaloff>logo128.png</iconset>
+    <normaloff>logo128.ico</normaloff>logo128.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
