--- a/src/qt/mainwindow.ui
+++ b/src/qt/mainwindow.ui
@@ -524,10 +524,20 @@
     <addaction name="actionEnable_Map"/>
     <addaction name="actionEnable_Landmarks"/>
    </widget>
+   <widget class="QMenu" name="menuProtocol">
+    <property name="title">
+     <string>Protocol</string>
+    </property>
+    <addaction name="actionProtocolAutomatic"/>
+    <addaction name="actionProtocolMeteorHRPT"/>
+    <addaction name="actionProtocolPOESGAC"/>
+    <addaction name="actionProtocolPOESHRPT"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuGeo"/>
    <addaction name="menuOptions"/>
    <addaction name="menuSensor"/>
+   <addaction name="menuProtocol"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -666,6 +676,75 @@
     <string>Correct</string>
    </property>
   </action>
+  <actiongroup name="groupProtocol">
+   <action name="actionProtocolAutomatic">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>Automatic/Other</string>
+    </property>
+   </action>
+   <action name="actionProtocolFY3">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>FengYun-3 HRPT</string>
+    </property>
+   </action>
+   <action name="actionProtocolPOESHRPT">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>NOAA POES HRPT</string>
+    </property>
+   </action>
+   <action name="actionProtocolPOESGAC">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>NOAA POES GAC</string>
+    </property>
+   </action>
+   <action name="actionProtocolPOESDSB">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>NOAA POES DSB</string>
+    </property>
+   </action>
+   <action name="actionProtocolMeteorHRPT">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>Meteor-M HRPT</string>
+    </property>
+   </action>
+   <action name="actionProtocolMeteorLRPT">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>Meteor-M LRPT</string>
+    </property>
+   </action>
+   <action name="actionProtocolMetOp">
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string>MetOp HRPT</string>
+    </property>
+   </action>
+  </actiongroup>
  </widget>
  <customwidgets>
   <customwidget>
