--- a/src/qt/mainwindow.ui
+++ b/src/qt/mainwindow.ui
@@ -297,18 +297,25 @@
            </widget>
           </item>
           <item>
-           <widget class="QSlider" name="contrastLimit">
+           <widget class="QSpinBox" name="contrastLimit">
+            <property name="suffix">
+             <string>%</string>
+            </property>
             <property name="maximum">
              <number>100</number>
             </property>
             <property name="value">
              <number>100</number>
             </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="contrastLimitApply">
+            <property name="enabled">
+             <bool>false</bool>
             </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksAbove</enum>
+            <property name="text">
+             <string>Apply</string>
             </property>
            </widget>
           </item>
